--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* 0.0.3
+	- Fix scope problem in transaction processlog callback
+	- Skip callbacks on failed processed transfers and converts
 * 0.0.2
 	- Correct entry point
 * 0.0.1
