--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* 0.0.5
+	- Add contract registry list
 * 0.0.4
 	- Add ABIs for all basic actions on Bancor network
 	- Optional load all convertible tokens to registry
