--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* 0.0.12
+	- Add owner get method to token abi
 * 0.0.11
 	- Ensure tokenload callback on registry is called if no tokens in network
 * 0.0.10
